// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foldable should be folded by default 1`] = `
<React.Fragment>
  <Summary
    isFoldable={true}
    isFolded={true}
    isSelected={true}
    key=".0"
    onSelection={[Function]}
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    isFolded={true}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</React.Fragment>
`;

exports[`Foldable toggleFold should change folded state 1`] = `
<React.Fragment>
  <Summary
    isFoldable={true}
    isFolded={false}
    key=".0"
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    isFolded={false}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</React.Fragment>
`;
